// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Profile/> renders the <Profiles/> with populated data 1`] = `
<div
  class="profiles__Container-bxtkkv-0 fGoDNJ"
>
  <div
    class="profiles__Title-bxtkkv-1 hPuemP"
  >
    Who's watching?
  </div>
  <ul
    class="profiles__List-bxtkkv-2 hybA-dO"
  >
    <li
      class="profiles__Item-bxtkkv-5 kJPhXM"
    >
      <img
        class="profiles__Picture-bxtkkv-4 kpLrAV"
        data-testid="profile-picture"
        src="/images/users//imagesPkarl.png.png"
      />
      <p
        class="profiles__Name-bxtkkv-3 jQTvVi"
      >
        Joseph Soukup
      </p>
    </li>
  </ul>
</div>
`;

exports[`<Profile/> renders the <Profiles/> with populated data but misc profile image 1`] = `
<div
  class="profiles__Container-bxtkkv-0 fGoDNJ"
>
  <div
    class="profiles__Title-bxtkkv-1 hPuemP"
  >
    Who's watching?
  </div>
  <ul
    class="profiles__List-bxtkkv-2 hybA-dO"
  >
    <li
      class="profiles__Item-bxtkkv-5 kJPhXM"
    >
      <img
        class="profiles__Picture-bxtkkv-4 kpLrAV"
        data-testid="profile-picture-misc"
        src="/images/users//imagesPkarl.png.png"
      />
      <p
        class="profiles__Name-bxtkkv-3 jQTvVi"
      >
        Joseph Soukup
      </p>
    </li>
  </ul>
</div>
`;
